testdata/result/query/bad_select.sql.txt
--- bad_select.sql
select

--- Error
syntax error: testdata/input/query/bad_select.sql:2:1: unexpected token: <eof>

  2:  
      ^


--- AST
&ast.QueryStatement{
  Hint:  (*ast.Hint)(nil),
  With:  (*ast.With)(nil),
  Query: &ast.Select{
    Select:   0,
    Distinct: false,
    As:       nil,
    Results:  []ast.SelectItem{
      &ast.ExprSelectItem{
        Expr: &ast.BadNode{
          NodePos: 7,
          NodeEnd: 7,
          Raw:     "",
        },
      },
    },
    From:    (*ast.From)(nil),
    Where:   (*ast.Where)(nil),
    GroupBy: (*ast.GroupBy)(nil),
    Having:  (*ast.Having)(nil),
    OrderBy: (*ast.OrderBy)(nil),
    Limit:   (*ast.Limit)(nil),
  },
}

--- SQL
SELECT 
